--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 
 <body class="site">
+  <div class="about">
+    <object data="/static/karpatski_vovky_logo.svg" type="image/svg+xml"></object>
+    <p>#КВ</p>
+  </div>
     <main class="site-content">
         <div id="root"></div>
     </main>
